--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Know Your Cocktail Drinks</title>
+    <link rel="shortcut icon" type="x-icon" href="./assets/county.webp">
     <link rel="stylesheet" href="styles.css">
 </head>
 
